# HIDE-deconv

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-test.yml  publish_pypi.yml
docs/: Userguide.md
src/hide_deconv/: __init__.py  cli.py  config.py  lazy.py
src/hide_deconv/cli_commands/: __init__.py  analyze_command.py  anndata_command.py  bulk_command.py  cohort_command.py  config_command.py  deconvolve_command.py  download_command.py  help_command.py  preprocess_command.py  setup_command.py  simulate_command.py  train_command.py
src/hide_deconv/constants/: __init__.py  messages.py  misc.py
src/hide_deconv/download/: __init__.py  download_file.py  sc_repos.txt
src/hide_deconv/models/: HIDE.py  __init__.py
src/hide_deconv/pipelines/: __init__.py  anndata_preprocess_pipeline.py  deconvolve_hide_pipeline.py  init_pipeline.py  lazy_deconvolution_pipeline.py  preprocess_pipeline.py  training_pipeline.py
src/hide_deconv/preprocessing/: __init__.py  bulk_preprocessing.py  train_preprocessing.py
src/hide_deconv/statistic/: __init__.py  clustering.py  kruskal_wallis.py  leiden.py  mann_whitney_u.py  plsda.py  posthoc_dunn.py  pydeseq2.py  survival_analysis.py
src/hide_deconv/utils/: __init__.py  anndata_utils.py  cli_utils.py  cohort_utils.py  config_utils.py  (+4 more)
tests/: conftest.py  test_analyze.py  test_anndata_command.py  test_bulk.py  test_cohort.py  test_heatmaps.py  test_hide.py  test_lazy_api.py  test_plsda.py  test_run.py  test_statistics.py
(+8 files in other folders)
