[project]
name = "hide-deconv"
version = "0.1.3"
description = "HIDE-Deconv - Hierarchical Cell Type Deconvolution"
authors = [
    {name = "Dennis Voelkl",email = "dennis.k.volkl@uib.no"},
    {name = "Franziska Goertler",email = "Franziska.Gortler@uib.no"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "anndata (>=0.12.10,<0.13.0)",
    "torch (>=2.11.0,<3.0.0)",
    "cvxpy (>=1.8.2,<2.0.0)",
    "gurobipy (>=13.0.1,<14.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "click (>=8.3.2,<9.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "inquirerpy (>=0.3.4,<0.4.0)",
    "rich (>=14.3.3,<15.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-posthocs (>=0.12.0,<0.13.0)",
    "requests (>=2.33.1,<3.0.0)",
    "scanpy (>=1.12.1,<2.0.0)",
    "lifelines (>=0.30.3,<0.31.0)",
    "umap-learn (>=0.5.12,<0.6.0)"
]

[project.urls]
Homepage = "https://github.com/dvoelkl/HIDE-deconv"
Repository = "https://github.com/dvoelkl/HIDE-deconv"
Issues = "https://github.com/dvoelkl/HIDE-deconv/issues"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
hide-deconv = "hide_deconv.cli:cli"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)"
]
